fix(body):add overflow x hidden

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@
 
 @font-face {
   font-family: "Montserrat Alternates SemiBold";
-  src: url("./assets/Fonts/MontserratAlternates-SemiBold.ttf") format("truetype");
+  src: url("./assets/Fonts/MontserratAlternates-SemiBold.ttf")
+    format("truetype");
 }
 
 @font-face {
@@ -57,7 +58,8 @@
 }
 
 :root {
-  font-family: "Montserrat Alternates Medium", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat Alternates Medium", Inter, system-ui, Avenir,
+    Helvetica, Arial, sans-serif;
   line-height: 1.5;
   color: black;
   color-scheme: light dark;
@@ -79,6 +81,7 @@ a:hover {
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1 {
